--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.5.4",
     "@ai-sdk/google": "^0.0.51",
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
@@ -27,10 +28,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@reown/walletkit": "^1.2.1",
     "@sparticuz/chromium": "^132.0.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
+    "@walletconnect/core": "^2.18.1",
+    "@walletconnect/utils": "^2.18.1",
     "ai": "3.4.9",
     "axios": "^1.7.9",
     "bcrypt-ts": "^5.0.2",
